Changed runtime exec for linux